# JWS

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.am  README.md  configure.ac  jws.cabal
jws/: configure.ac
jws-config/: configure.ac
jws-config/src/: Makefile.am  jwsconfigapplication.c  jwsconfigapplication.h  jwsconfigimageviewer.c  jwsconfigwindow.c  jwsconfigwindow.h  main.c
jws-config/src/resources/: jwsconfig.gresource.xml
jws-config/src/resources/ui/: imageviewer.ui  jwswindow.ui
jws-customizer/: README.txt  builder-objects.lisp  jws-info.lisp  jws.asd  jws.lisp  jwswindow.ui  package.lisp
jws/po/: POTFILES.in
jws/src/: Makefile.am  jwsapplication.c  jwsapplication.h  jwsinfo.c  jwsinfo.h  jwssetter.c  jwssetter.h  main.c
man/: Makefile.am  jws.1
po/: Makevars
src/: CMakeLists.txt  Main.hs  Makefile.am  jwsapplication.c  jwsapplication.h  jwsinfo.c  jwsinfo.h  jwssetter.c  jwssetter.h  jwstime.c  jwstime.h  main.c
src/JWS/: Config.hs  Options.hs
